--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,8 @@ repositories {
 
 dependencies {
     compile 'org.jetbrains.kotlin:kotlin-stdlib:1.2.0'
-        compile 'commons-net:commons-net:3.6'
+    compile 'commons-net:commons-net:3.6'
+    compile 'io.druid:java-util:0.12.0'
 }
 
 apply plugin: 'kotlin'
