--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,8 +36,7 @@ jobs:
       with:
         java-version: 1.8
 
-    - shell: bash
-      env:
+      secrets:
         SRCCLR_API_TOKEN: ${{ secrets.SRCCLR_API_TOKEN }}
         SRCCLR_WORKSPACE_SLUG: ${{ secrets.SRCCLR_WORKSPACE_SLUG }}
 
